sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Search_Value__mdt/DD_Multi_Select_Picklist_Search_Value__mdt.object-meta.xml
<CustomObject>
    <description>Static values for &apos;DD Multi Select Picklist Object Search&apos;</description>
    <label>DD Multi Select Picklist Search Value</label>
    <pluralLabel>DD Multi Select Picklist Search Values</pluralLabel>
</CustomObject>