sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Search_Value__mdt/fields/Display_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Display_Sequence__c</fullName>
    <label>Display Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>