sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Search_Value__mdt/fields/Dropdown_Label__c.field-meta.xml
<CustomField>
    <fullName>Dropdown_Label__c</fullName>
    <label>Dropdown Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>