sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Search_Value__mdt/fields/Dropdown_SubLabel__c.field-meta.xml
<CustomField>
    <fullName>Dropdown_SubLabel__c</fullName>
    <label>Dropdown SubLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>