sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Search_Value__mdt/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <referenceTo>DD_Multi_Select_Picklist_Master__mdt</referenceTo>
    <relationshipLabel>DD Multi Select Picklist Search Values</relationshipLabel>
    <relationshipName>DD_Multi_Select_Picklist_Search_Values</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>