sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Search_Value__mdt/fields/Pill_Label__c.field-meta.xml
<CustomField>
    <fullName>Pill_Label__c</fullName>
    <label>Pill Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>