sfdx-source/force-app/main/default/objects/DD_Multi_Select_Picklist_Search_Value__mdt/validationRules/Parent_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(Parent__r.Type__c,&apos;Static Values (in DD Multi Select Picklist Search Value)&apos;))</errorConditionFormula>
    <errorDisplayField>Parent__c</errorDisplayField>
    <errorMessage>Entries are allowed only for parents of type &apos;Static Values&apos; in this custom metadata type</errorMessage>
</ValidationRule>